# ucell

./: .gitignore  README.md  config.py  data.py  eval.py  few_shot_adapt.py  lora.md  predict.py  pyproject.toml  train.py
dead_neuron_analysis/: README.md  analyze_neurons_advanced.py  detect_dead_neurons.py
tests/: test_checkpoint_loading.py
ucell/: dynamics.py  frm.py  layers.py  lora.py  metrics.py  utils.py
