[project]
name = "ucell"
dynamic = ["version"]
description = ""
readme = "README.md"
license-files = ["LICENSE"]
authors = [
  {name = "Ji Yu"},
  {email = "jyu@uchc.edu"},
]
requires-python = ">=3.11"
dependencies = [
    "torch",
    "einops",
    "scikit-image",
    "fastremap",
    "ml_collections",
    "tqdm",
 ]

[project.optional-dependencies]
testing = [
    "pytest",
]
train = [
    "lightning",
    "wandb",
    "torchvision",
    "datasets",
]
analysis = [
    "umap-learn",
    "matplotlib",
]

[project.urls]
"Source Code" = "https://github.com/jiyuuchc/ucell"

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ucell"]
package-dir = {"ucell" = "ucell"}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]
write_to = "ucell/_version.py"

[tool.black]
line-length = 79
target-version = ['py311']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py311"
fix = true
